Changelog
=========

0.9.2 - 
------------------
- Enable '-h' short-form help option.
  [brucewillke]

- Fix checking latest version on pypi.
  [ggozad]

0.9.1 - 2025-03-25 
------------------
- Check with pypi if oterm is up to date.
  [ggozad]

- CLI command creation.
  [ggozad]

- Remove pyperclip dependency.
  [ggozad]

- Documentation site.
  [ggozad]

0.8.4 - 2025-02-23
------------------
- Keep MCP sessions alive while oterm is running. Fix running multiple MCP tools.
  [sheffler, ggozad]

0.8.3 - 2025-02-06
------------------
- Do not save the chat when a model is selected when creating a new chat.
  [ggozad]

- Replace custom Notification() with textual's built-in notification.
  [ggozad]

- Dependency updates.
  [ggozad]

- Improve visibility of labels in the modals.
  [ggozad]

0.8.2 - 2025-02-03
------------------

- Fix merging chat and additional options properly.
  [ggozad]

0.8.1 - 2025-01-29
------------------

- Support for thinking models (e.g. DeepSeek R1).
  [liorm]

0.8.0 - 2025-01-19
------------------

- Support for Model Context Protocol(MCP) tools.
  [ggozad]

- Simplify Config(), base it on pydantic's BaseModel.
  [ggozad]

0.7.3 - 2025-01-07
------------------

- Fix parameter parsing / Options bug
  [lorenmh]

0.7.2 - 2025-01-03
------------------

- Ability to add custom tools!
  [ggozad]

- Add a web tool, giving Ollama access to the web.
  [ggozad] 

0.7.1 - 2025-01-02
------------------

- Support for Ollama's structured output. 
  Use the `format` parameter to specify the output format as a JSON schema.

- Ability to clear a chat, removing all messages.
  [ggozad]

0.7.0 - 2024-12-29
------------------

- Enforce foreign key constraints in the sqlite db, to allow proper cascading deletes.
  [ggozad]

- Perist images in the chat history & sqlite db.
  [ggozad]

- Update OllamaLLM client to match the use of Pydantic in olllama-python.
  [ggozad]

- Gracefully handle exceptions in tools.
  [ggozad]
