@@ -3,6 +3,10 @@ Changelog
 
 0.9.2 - 
 ------------------
+
+- Override default Ollama Options() to allow for single string as a stop word. 
+  [ggozad]
+
 - Enable '-h' short-form help option.
   [brucewillke]
 
